src/index.css
/*-----------------
    RESET
------------------*/
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/*---------------------------


    LAYOUT


------------------------------*/
.container {
  max-width: 1200px;
  margin: auto;
}
.row {
  display: flex;
  flex-wrap: wrap;
}
body {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
}

/*---------------------------


Buttons


------------------------------*/
.primary-btn {
  background-color: transparent;
  color: white;
  border: #0282f9 2px solid;
  font-size: 30px;
  padding: 15px 15px;
  cursor: pointer;
}
/*---------------------------
header
------------------------------*/
nav {
  padding: 15px 0px;
}
nav div {
  flex-grow: 4;
}
nav ul {
  text-align: center;
  flex-grow: 3;
  justify-content: center;
}
nav li {
  padding: 40px 10px;
  list-style: none;
}
nav a {
  display: inline-block;
  text-decoration: none;
  color: #1c1c1c;
}
nav a:hover {
  color: #67b4fb;
}
.active {
  color: #0282f9;
  position: relative;
}
.active > a {
  color: #0282f9;
}
.active::after {
  content: "";
  position: absolute;
  left: 5%;
  bottom: -15px;
  width: 90%;
  border-bottom: 0.25rem solid #0282f9;
}
/*---------------------------
main
------------------------------*/
main section:first-of-type {
  background-color: #1c1c1c;
  color: white;
}
main .top-section {
  font-size: 25px;
  padding: 30px 5px;
}
main section:last-of-type {
  background-color: #0282f9;
  color: white;
}
main ul {
  display: flex;
}
main li {
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}
main img {
  max-height: 40%;
}
main a {
  padding: 0px 10px;
  font-size: 14px;
  display: inline-block;
  text-decoration: none;
  color: white;
}
/*---------------------------
footer
------------------------------*/
footer .top-section {
  background-image: url("./footer-bg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  padding: 20px 0;
}
footer section > div > ul {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  max-height: 400px;
  max-width: 50%;
}
footer section > div > ul > li {
  padding: 5px 10px;
}
footer .top-section ul > li > ul > li a {
  color: grey;
  text-decoration: none;
}
/* .logo {
  background-image: url("./dc-logo-bg.png");
  position: absolute;
  flex-grow: 1;
  z-index: 0;
} */
footer a {
  color: grey;
  text-decoration: none;
}
section > div:first-of-type {
  display: flex;
  position: relative;
}
.lists {
  padding-right: 40px;
}
.container > div {
  padding-left: 15px;
}
footer > .top-section .container {
  position: relative;
}
footer li {
  list-style: none;
}
footer h1 {
  padding-top: 10px;
  padding-bottom: 8px;
}
footer .top-section li {
  padding-top: 8px;
}
footer .top-section img {
  z-index: 0;
  position: absolute;
  top: -140px;
  right: 10px;
}
.bottom-section {
  background-color: #303030;
  z-index: 20;
}
.btn-container {
  margin: 20px 15px;
}
.bottom-section div:last-of-type {
  color: #0282f9;
  display: flex;
  align-items: center;
  font-size: 20px;
}
footer p {
  padding-right: 15px;
}
.bottom-section .container {
  display: flex;
  justify-content: space-between;
}
.bottom-section ul {
  display: flex;
}
.bottom-section li {
  padding: 0 10px;
}

/*---------------------------


  interaction


------------------------------*/
/*---------------------------
main
------------------------------*/
footer a:hover {
  color: white;
}

